objects/WorkOrder__x.object
<CustomObject>
    <fields>
        <fullName>ErrorCode_c__c</fullName>
        <externalDeveloperName>ErrorCode__c</externalDeveloperName>
        <label>Error Code (do not use)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSLOfflineAssetNotFound_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSLOfflineAssetNotFound__c</externalDeveloperName>
        <label>FSL Offline Asset Not Found</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_IsFillInCandidate_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__IsFillInCandidate__c</externalDeveloperName>
        <label>Is Fill In Candidate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Prevent_Geocoding_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</externalDeveloperName>
        <label>Prevent Geocoding For Chatter Actions</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Scheduling_Priority_c__c</fullName>
        <externalDeveloperName>FSL__Scheduling_Priority__c</externalDeveloperName>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_VisitingHours_c__c</fullName>
        <externalDeveloperName>FSL__VisitingHours__c</externalDeveloperName>
        <label>Visiting Hours</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FakeSalesOrder_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FakeSalesOrder__c</externalDeveloperName>
        <label>Fake Sales order ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FolderName_c__c</fullName>
        <externalDeveloperName>FolderName__c</externalDeveloperName>
        <label>Folder Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FunctionalLocationSapNumber_c__c</fullName>
        <externalDeveloperName>FunctionalLocationSapNumber__c</externalDeveloperName>
        <label>Functional Location Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FunctionalLocation_c__c</fullName>
        <externalDeveloperName>FunctionalLocation__c</externalDeveloperName>
        <label>Functional Location Asset</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalFieldAction_c__c</fullName>
        <externalDeveloperName>GlobalFieldAction__c</externalDeveloperName>
        <inlineHelpText>Global Field Action at the origin of the WO</inlineHelpText>
        <label>Global Field Action</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <externalDeveloperName>GrandTotal</externalDeveloperName>
        <label>Grand Total</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Info_c__c</fullName>
        <externalDeveloperName>Info__c</externalDeveloperName>
        <label>Info</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstallationDueNext30DaysWO_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>InstallationDueNext30DaysWO__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: Determines for the WO, if the install date on the associated sales order is within 30 days of today.</inlineHelpText>
        <label>Installation Due Next &lt; 30 Days: WO</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterfaceErrorMessage_c__c</fullName>
        <externalDeveloperName>InterfaceErrorMessage__c</externalDeveloperName>
        <inlineHelpText>Message type: S Success, E Error, W Warning, I Info, A Abort</inlineHelpText>
        <label>SAP Interface Error Message</label>
        <length>131072</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Status_c__c</fullName>
        <externalDeveloperName>Interface_Status__c</externalDeveloperName>
        <label>SAP Interface Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAssignedFseOnMyTeam_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsAssignedFseOnMyTeam__c</externalDeveloperName>
        <label>User =Last Assigned Manager?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Is Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPlatinum_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPlatinum__c</externalDeveloperName>
        <label>Platinum</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSkillMassUpdated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsSkillMassUpdated__c</externalDeveloperName>
        <label>Is Skill Mass Updated</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsStopped</externalDeveloperName>
        <label>Stopped</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserLastAssigned_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsUserLastAssigned__c</externalDeveloperName>
        <label>Is User Last Assigned ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWoInMyRegion_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsWoInMyRegion__c</externalDeveloperName>
        <label>User=WO Territory Owner?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWorkOrderPor_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsWorkOrderPor__c</externalDeveloperName>
        <label>Is Work Order POR?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastAssignedResource_c__c</fullName>
        <externalDeveloperName>LastAssignedResource__c</externalDeveloperName>
        <label>Last Assigned Resource</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastAssignedServiceResource_c__c</fullName>
        <externalDeveloperName>LastAssignedServiceResource__c</externalDeveloperName>
        <inlineHelpText>The last assigned service resource</inlineHelpText>
        <label>Last Assigned Service Resource</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineItemCount__c</fullName>
        <externalDeveloperName>LineItemCount</externalDeveloperName>
        <label>Line Items</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalFieldAction_c__c</fullName>
        <externalDeveloperName>LocalFieldAction__c</externalDeveloperName>
        <inlineHelpText>Lookup to the Local Field Action at the origin of the WO</inlineHelpText>
        <label>Local Field Action</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <externalDeveloperName>LocationId</externalDeveloperName>
        <label>Location ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationSapNumber_c__c</fullName>
        <externalDeveloperName>LocationSapNumber__c</externalDeveloperName>
        <label>Ship-to Location Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaintenancePlanId__c</fullName>
        <externalDeveloperName>MaintenancePlanId</externalDeveloperName>
        <label>Maintenance Plan ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenancePlan_c__c</fullName>
        <externalDeveloperName>MaintenancePlan__c</externalDeveloperName>
        <label>Maintenance Plan</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <label>Market</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                    <label>0010 - Clinical</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020 - Industry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MassUpdatedDate_c__c</fullName>
        <externalDeveloperName>MassUpdatedDate__c</externalDeveloperName>
        <label>Mass Updated Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MilestoneStatus__c</fullName>
        <externalDeveloperName>MilestoneStatus</externalDeveloperName>
        <label>Milestone Status</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumCrewSize__c</fullName>
        <externalDeveloperName>MinimumCrewSize</externalDeveloperName>
        <label>Minimum Crew Size</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyTerritoryWO_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>MyTerritoryWO__c</externalDeveloperName>
        <inlineHelpText>For Reporting Only: Does the main work center on the WO match the department that the logged in user is assigned to?</inlineHelpText>
        <label>My Territory? WO</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneDriveDriveId_c__c</fullName>
        <externalDeveloperName>OneDriveDriveId__c</externalDeveloperName>
        <label>OneDrive Drive Id</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneDriveFolderId_c__c</fullName>
        <externalDeveloperName>OneDriveFolderId__c</externalDeveloperName>
        <label>OneDrive Folder Id</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneDriveFolderToBeCreated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OneDriveFolderToBeCreated__c</externalDeveloperName>
        <label>One Drive Folder To Be Created</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneDriveFolderURL_c__c</fullName>
        <externalDeveloperName>OneDriveFolderURL__c</externalDeveloperName>
        <label>OneDrive Folder URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OpenDurationDaysWO_c__c</fullName>
        <externalDeveloperName>OpenDurationDaysWO__c</externalDeveloperName>
        <inlineHelpText>For Reporting Only. Calculates the time WO open. If status is still open, uses today's date.</inlineHelpText>
        <label>Open Duration Days WO</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenWOOverdue_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OpenWOOverdue__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: True If the Work Order is not completed and the due date is &lt;today</inlineHelpText>
        <label>Open WO Overdue?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMClosed60DaysAfterCreated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PMClosed60DaysAfterCreated__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: Determines if closed Preventative Maintenance WOs were closed within 60 days of their created date or after.</inlineHelpText>
        <label>PM Closed 60 Days After Created?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO1_c__c</fullName>
        <externalDeveloperName>PO1__c</externalDeveloperName>
        <label># Work Order</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentWorkOrderId__c</fullName>
        <externalDeveloperName>ParentWorkOrderId</externalDeveloperName>
        <label>Parent Work Order ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>Zip</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousWorkOrder_c__c</fullName>
        <externalDeveloperName>PreviousWorkOrder__c</externalDeveloperName>
        <label>Previous Work Order</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <externalDeveloperName>Pricebook2Id</externalDeveloperName>
        <label>Product Book ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <externalDeveloperName>Priority</externalDeveloperName>
        <label>Priority</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchaseOrder_c__c</fullName>
        <externalDeveloperName>PurchaseOrder__c</externalDeveloperName>
        <label>Purchase Order Number</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedCrewSize__c</fullName>
        <externalDeveloperName>RecommendedCrewSize</externalDeveloperName>
        <label>Recommended Crew Size</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestSync_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RequestSync__c</externalDeveloperName>
        <label>Request Sync (OneDrive)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Type_c__c</fullName>
        <externalDeveloperName>Resource_Type__c</externalDeveloperName>
        <label>Resource Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FSE</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>FCS</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReturnOrderId__c</fullName>
        <externalDeveloperName>ReturnOrderId</externalDeveloperName>
        <label>Return Order ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnOrderLineItemId__c</fullName>
        <externalDeveloperName>ReturnOrderLineItemId</externalDeveloperName>
        <label>Return Order Line Item ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoHS_compliant_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RoHS_compliant__c</externalDeveloperName>
        <inlineHelpText>RoHS compliance indicator for Equipment assets</inlineHelpText>
        <label>RoHS compliant</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RootWorkOrderId__c</fullName>
        <externalDeveloperName>RootWorkOrderId</externalDeveloperName>
        <label>Root Work Order ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPAccountingIndicatortimesheet_c__c</fullName>
        <externalDeveloperName>SAPAccountingIndicatortimesheet__c</externalDeveloperName>
        <inlineHelpText>This is a default value that will not be updated if it is updated at the timesheet level</inlineHelpText>
        <label>Default Accounting Indicator (timesheet)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30%</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>YC</fullName>
                    <label>TO BE CHARGED</label>
                </value>
                <value>
                    <fullName>YF</fullName>
                    <label>INCLUDED</label>
                </value>
                <value>
                    <fullName>YN</fullName>
                    <label>NOT DISPLAYED</label>
                </value>
                <value>
                    <fullName>YX</fullName>
                    <label>EXTRA HOURS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAPAccountingProductConsumed_c__c</fullName>
        <externalDeveloperName>SAPAccountingProductConsumed__c</externalDeveloperName>
        <inlineHelpText>This is a default value that will not be updated if it is updated at the product level</inlineHelpText>
        <label>Default Acc. Indicator (Prod consumed)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30%</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>YC</fullName>
                    <label>TO BE CHARGED</label>
                </value>
                <value>
                    <fullName>YF</fullName>
                    <label>INCLUDED</label>
                </value>
                <value>
                    <fullName>YN</fullName>
                    <label>NOT DISPLAYED</label>
                </value>
                <value>
                    <fullName>YX</fullName>
                    <label>EXTRA HOURS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_AccountingIndicator_c__c</fullName>
        <externalDeveloperName>SAP_AccountingIndicator__c</externalDeveloperName>
        <label>SAP Accounting Indicator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30%</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>YC</fullName>
                    <label>TO BE CHARGED</label>
                </value>
                <value>
                    <fullName>YF</fullName>
                    <label>INCLUDED</label>
                </value>
                <value>
                    <fullName>YN</fullName>
                    <label>NOT DISPLAYED</label>
                </value>
                <value>
                    <fullName>YX</fullName>
                    <label>EXTRA HOURS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Number_c__c</fullName>
        <externalDeveloperName>SAP_Number__c</externalDeveloperName>
        <label>SAP Work Order Number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PMActivityType_c__c</fullName>
        <externalDeveloperName>SAP_PMActivityType__c</externalDeveloperName>
        <label>SAP PM Activity Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>001 - CORRECTIVE MAINTENANCE</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002 - AUDIT / CONSULTING / PROJECT</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003 - CONTROL / RECONDITIONING</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004 - CUSTOMER FOLLOW-UP</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005 - INSTALLATION</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007 - PRE INSTALLATION INSPECTION</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008 - PREVENTIVE MAINTENANCE</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009 - SITE MOVE / REMOVAL</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010 - CUSTOMER TRAINING</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011 - UPDATE / UPGRADE</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012 - TOOL KIT CALIBRATION</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015 - RETURN ON SERVICE</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016 - CONNECTIVITY</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017 - REMOTE SUPPORT</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018 - PRE SALES / SALES</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021 - CALIBRATION / METROLOGY</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>023 - QUALIFICATION / VERIFICATION</label>
                </value>
                <value>
                    <fullName>024</fullName>
                    <label>024 - SITE ACCEPTANCE TEST</label>
                </value>
                <value>
                    <fullName>025</fullName>
                    <label>025 - HYPERCARE</label>
                </value>
                <value>
                    <fullName>026</fullName>
                    <label>026 - REPAIR WITH RETURN</label>
                </value>
                <value>
                    <fullName>027</fullName>
                    <label>027 - FIELD ACTION</label>
                </value>
                <value>
                    <fullName>028</fullName>
                    <label>028 - LOGISTICS</label>
                </value>
                <value>
                    <fullName>029</fullName>
                    <label>029 - INTERNAL TRAINING</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>030 - INTERNAL PROJECTS</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>031 - TIME OFF</label>
                </value>
                <value>
                    <fullName>032</fullName>
                    <label>032 - ADMINISTRATIVE</label>
                </value>
                <value>
                    <fullName>033</fullName>
                    <label>033 - MANAGEMENT / ORGANIZATION</label>
                </value>
                <value>
                    <fullName>034</fullName>
                    <label>034 - CLASSROOM TRAINING</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>